code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_28.wast
(assert_invalid
  (module (func $unbound-nested-label (block (block (br_if 5 (i32.const 1))))))
  "unknown label"
)